--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataCollector/templates/home.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataCollector/templates/home.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+{% block content %}
 <html>
 	<body>
 		<form action="hit" method="post">
@@ -7,3 +9,5 @@
 		</form>
 	</body>
 </html>
+{% endblock %}
+
