--- a/TwitterSentimentAnalyser/TSentimentAnalyser/templates/base.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/templates/base.html
@@ -45,3 +45,31 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
+
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+<style media="screen" type="text/css">
+        body {
+            display: flex;
+            min-height: 100vh;
+            flex-direction: column;
+        }
+        main {
+            flex: 1 0 auto;
+        }
+    </style>
+ </script>{% block header %}{% endblock %}
+</header>
+<main>
+    <br>
+    {% block body %}{% endblock %}
+</main>
+<footer class="page-footer teal lighten-2" style="!important;padding-top: 0">
+    <div class="footer-copyright">
+        <div class="container">© 2020 copyright
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a></div>
+    </div>
+</footer>
+</body>
+</html>
+
