--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/prediction.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/prediction.html
@@ -26,9 +26,8 @@
   <p>Use the button below to display all used Tweets with their sentiment score.</p>
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#showcase">Expand / Collapse</button>
   <div id="showcase" class="collapse">
-    {{ html_table | safe }}
+    {{ df_short_html | safe }}
   </div>
-
 </div>
 
 </body>
