--- a/TwitterSentimentAnalyser/TSentimentAnalyser/templates/base.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/templates/base.html
@@ -1,54 +1,79 @@
-<!doctype html>
+<!D0CTYPE html>
 <html lang="en">
-  <head>
+{% load static %}
+<html>
+<head>
+    <title>Navbar with logo</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-   {% block title %}
+    {% block title %}
    {% endblock title %}
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
+    <style>
+     body{
+        margin:0;
+        padding:0;
+        background:white;
+        }
+     nav{
+        width:100%;
+        background:black;
+        overflow:auto;
+        }
+     ul{
+        padding:0;
+        margin:0 0 0 150px;
+        list-style:none
+        }
+     li{
+        float:left;
+        }
+     .logo img{
+        position:absolute;
+        margin-top:5px;
+        margin-left:20px;
+        }
+     nav a{
+        width:400px;
+        display:block;
+        padding:20px 15px;
+        text-decoration:none;
+        font-family:Arial;
+        color:#039be5;
+        text-align:center;
+        }
+     nav a:hover {
+        background:none;
+        transition:0.5s;
+        text-transform:uppercase;
+        }
 
-      <!-- Navigation Bar Start -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-info">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                  <li class="nav-item active">
-                      <a class="nav-link" href="http://127.0.0.1:8000">Home <span class="sr-only">(current)</span></a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#">FAQ</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#">Contact</a>
-                  </li>
-              </ul>
-          </div>
-      </nav>
-      <!-- Navigation Bar End -->
-  </head>
-
+    </style>
+</head>
+<body>
+<div class ="logo"><a href ="#"><img src = "{%static 'twitterlogo.png' %}" width = "120px"></a>
+</div>
+<nav>
+    <ul>
+         <li><a href ="#"> Home</a></li>
+        <li><a href ="./FAQ"> FAQ</a></li>
+        <li><a href ="./Contact"> Contact</a></li>
+    </ul>
+</nav>
+</body>
+</html>
+ </head>
   <body>
-    {% block content %}
-
+   {% block content %}
     {% endblock content%}
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+</body>
 </html>
 
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
-<style media="screen" type="text/css">
+<!___*** Footer Area ***___!>
+<style >
         body {
             display: flex;
             min-height: 100vh;
@@ -57,16 +82,14 @@
         main {
             flex: 1 0 auto;
         }
+
     </style>
- </script>{% block header %}{% endblock %}
-</header>
+
 <main>
-    <br>
-    {% block body %}{% endblock %}
 </main>
-<footer class="page-footer teal lighten-2" style="!important;padding-top: 0">
+    <footer class="page-footer teal lighten-2" style="!important;padding-top: 0">
     <div class="footer-copyright">
-        <div class="container">© 2020 copyright
+        <div class="container">© 2020 Created by Students of University of Liechtenstein
             <a class="grey-text text-lighten-4 right" href="#!">More Links</a></div>
     </div>
 </footer>
