added TwitterTrends/form.py modified base.html, home.html, prediction.html
TwitterTrends.views
WordCloud.views
TwitterDataAnalyser.views

Twitter Trends now finally work. They're implemented on the Homepage. Added them into App_TwitterDataCollector as it was just easier to do and worked.
Need to do some cleaning so that there is no redundant code

--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/prediction.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/prediction.html
@@ -21,7 +21,7 @@
   <h5>Positive Tweets: <var>{{count_positive}}</var></h5>
   <h5>Neutral Tweets: <var>{{count_neutral}}</var></h5>
   <h5>Negative Tweets: <var>{{count_negative}}</var></h5>
-  <h4>Who Tweets about <b><var>{{input_hashtag}}</var></b>?</h4>
+  <h4>Who tweets about <b><var>{{input_hashtag}}</var></b>?</h4>
   <h6>Here is a list with the most known people that currently tweeted about this topic:</h6>
   {{ df_top_html | safe }}
   <h4>Loaded Tweets</h4>
