--- a/TwitterSentimentAnalyser/TSentimentAnalyser/templates/base.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/templates/base.html
@@ -3,7 +3,7 @@
 {% load static %}
 <html>
 <head>
-    <title>Navbar with logo</title>
+    <title>Twitter Sentiment Analyser</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -67,13 +67,19 @@
  </head>
   <body>
    {% block content %}
-    {% endblock content%}
+   {% endblock content%}
+
+   {% block content2 %}
+   {% endblock content2 %}
+
+   {% block content3 %}
+   {% endblock content3 %}
 
 </body>
 </html>
 
 <!___*** Footer Area ***___!>
-<style >
+<style>
         body {
             display: flex;
             min-height: 100vh;
