--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/prediction.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/prediction.html
@@ -21,8 +21,11 @@
   <h5>Positive Tweets: <var>{{count_positive}}</var></h5>
   <h5>Neutral Tweets: <var>{{count_neutral}}</var></h5>
   <h5>Negative Tweets: <var>{{count_negative}}</var></h5>
+  <h5>Min Sentiment Score in Tweets: <var>{{min_sentiment}}</var></h5>
+  <h5>Max Sentiment Score in Tweets: <var>{{max_sentiment}}</var></h5>
+  <h5>Standard Deviation of Sentiment Score: <var>{{std_sentiment}}</var></h5>
   <h4>Who tweets about <b><var>{{input_hashtag}}</var></b>?</h4>
-  <h6>Here is a list with the most known people that currently tweeted about this topic:</h6>
+  <h6>Here is a list based on the follower count of the Tweeters. Maybe someone famous tweeted about it?</h6>
   {{ df_top_html | safe }}
   <h4>Loaded Tweets</h4>
   <p>Use the button below to display all used Tweets with their sentiment score.</p>
