--- a/TwitterSentimentAnalyser/TSentimentAnalyser/templates/FAQ.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/templates/FAQ.html
@@ -5,23 +5,37 @@
     <meta charset="UTF-8">
     <title>This is FAQ page</title>
     <div class="box">
-   <p class="heading">FAQs</p>
+   <h5 class="heading">Frequently Asked Questions</h5>
    <div class="faqs">
       <details>
-         <summary>What is Twitter Sentiment Analysis?</summary>
-         <p class="text"> Sentiment Analysis is a technique used in text mining. It may, therefore, be described as a text mining technique for analyzing the underlying sentiment of a text message, i.e., a tweet. Twitter sentiment or opinion expressed through it may be positive, negative or neutral.</p>
+         <summary><b>What is a Sentiment Analysis?</b></summary>
+         <p class="text"> Sentiment Analysis is a technique used in text mining. It may, therefore, be described as a
+            text mining technique for analyzing the underlying sentiment of a text message, i.e., a Tweet. Twitter
+            sentiment or opinion expressed through it may be positive, negative or neutral.</p>
       </details>
       <details>
-         <summary>How do you calculate the Sentiment Score?</summary>
-         <p class="text"> For the calculation we use VaderSentiment. Before analyzing each Tweet, our programs strips all irrelevant data (Links, special characters, ...). After the evaluation of VaderSentiment we assign the Score back to the Tweets. As it can be seen our our Output Page we do additional calculations based of the output.</p>
+         <summary><b>How do you calculate the Sentiment Score?</b></summary>
+         <p class="text"> We use a Python Module called <a href="https://www.geeksforgeeks.org/python-sentiment-analysis-using-vader/">
+            VaderSentiment</a> for the calculation of the Sentiment Score. Before analyzing each Tweet, our programs
+            strips all irrelevant data (Links, special characters, ...) from the text, which could affect the evaluation
+            process. After rating the Tweet, our system performs additional calculations, which can be seen on our
+            Output Page.</p>
       </details>
       <details>
-         <summary>How does this website work?</summary>
-         <p class="text">You have to write a word or enter a hashtag for which you would like to get sentiments. You also have to enter the number of tweets and then click on submit button.</p>
+         <summary><b>How can I use this website?</b></summary>
+         <p class="text">It is fairly simple to use. All you have to do is head over to our
+            <a href="http://127.0.0.1:8000">Homepage</a> and input the Searchterm or Hashtag you would like us to
+            analyse for you. Additionally you can define how many Tweets should be considered.</p>
       </details>
       <details>
-         <summary>Whom should I contact for further information or queries?</summary>
-         <p class="text">For further information or queries, you can find our contact information at the contact page.</p>
+         <summary><b>Where does the data come from?</b></summary>
+         <p class="text">We use the <a href="https://developer.twitter.com/en/docs/twitter-api">Twitter API </a>to
+            directly access the latest Tweets from Twitter based on your input.</p>
+      </details>
+      <details>
+         <summary><b>Whom should I contact for further information or queries?</b></summary>
+         <p class="text">For further information or queries, you can find our contact information at the
+            <a href="http://127.0.0.1:8000/Contact">contact page</a>.</p>
       </details>
 <style>
      @import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
@@ -31,8 +45,8 @@ body{
 }
 
 .box{
-   width: 600px;
-   margin: 100px auto;
+   width: 1800px;
+   margin: 10px auto;
    background: #eceff1;
    border-radius: 7px;
    box-shadow: 5px 10px 15px rgba(0,0,0,.3);
