Changed Icon-Link and footer color

--- a/TwitterSentimentAnalyser/TSentimentAnalyser/templates/base.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/templates/base.html
@@ -53,7 +53,7 @@
     </style>
 </head>
 <body>
-<div class ="logo"><a href ="#"><img src = "{%static 'twitterlogo.png' %}" width = "120px"></a>
+<div class ="logo"><a href ="http://127.0.0.1:8000"><img src = "{%static 'twitterlogo.png' %}" width = "120px"></a>
 </div>
 <nav>
     <ul>
@@ -84,21 +84,23 @@
             display: flex;
             min-height: 100vh;
             flex-direction: column;
+
         }
         main {
             flex: 1 0 auto;
         }
 
+
     </style>
 
 <main>
 </main>
-    <footer class="page-footer teal lighten-2" style="!important;padding-top: 0">
+    <footer class="page-footer #455a64 blue-grey darken-2" style="!important;padding-top: 0">
+
     <div class="footer-copyright">
         <div class="container">© 2020 Created by Students of University of Liechtenstein
             <a class="grey-text text-lighten-4 right" href="#!">More Links</a></div>
     </div>
 </footer>
-</body>
 </html>
 
