Minor changes in the visualization of the Contact Page.

--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/Contact.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/Contact.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>This is Contact page</title>
     <div class="box">
-   <p class="heading">Get in touch</p>
+   <h5 class="heading">Any questions? Contact us</h5>
    <div class="Get in touch">
 	      <table>
 					<tr>
@@ -32,8 +32,8 @@
 }
 
 .box{
-   width: 600px;
-   margin: 100px auto;
+   width: 1500px;
+   margin: 10px auto;
    background: #eceff1;
    border-radius: 7px;
    box-shadow: 5px 10px 15px rgba(0,0,0,.3);
@@ -62,9 +62,12 @@ details{
    letter-spacing: 1px;
    cursor: pointer;
 }
+
 </style>
    </div>
 </div>
+
+
 </head>
 </html>
 {% endblock %}
