--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataCollector/templates/home.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataCollector/templates/home.html
@@ -1,38 +1,67 @@
 {% extends "base.html" %}
 {% block content %}
 {% load static %}
-<html>
-	<body>
-		<form action="hit" method="post">
-			{% csrf_token %}
-			{{ ff.as_p }}<br>
-			<button type="submit">Submit</button>
-		</form>
-	</body>
+
+  <!-- Header -->
+  <header class="bg-primary py-5 mb-5">
+    <div class="container h-100">
+      <div class="row h-100 align-items-center">
+        <div class="col-lg-12">
+          <h1 class="display-4 text-white mt-5 mb-2">Twitter Sentiment Analyser</h1>
+			<p class="lead mb-5 text-white-50">An easy and fast tool to analyse Tweets on Twitter.</p>
+			<div class ="form-group">
+				<form action="hit" method="post">
+					{% csrf_token %}
+         			{{ ff.as_p }}
+         			<button class="btn btn-primary btn btn-light" type="Submit">Submit</button>
+				</form>
+			</div>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <!-- Page Content -->
+
+
+  <div class="container">
+
+    <div class="row">
+		<div class="col-md-8 mb-5">
+		<h2>Region Specific Trends</h2>
+		<hr>
+        <p>Would you like to know more about a certain location? Just insert any place you want in the form below.</p>
+			<div class ="form-group">
+				<form action="." method="post">
+					{% csrf_token %}
+         			{{ location.as_p }}
+         			<button class="btn btn-primary btn btn-light" type="Submit">Submit</button>
+				</form>
+			</div>
+		</div>
+		<div class="col-md-4 mb-5">
+  		<h2>Top 10 Trends for: {{input_location}}</h2>
+		<hr>
+			{% for trend in top10_trends %}
+			{{ trend }}<br>
+			{% endfor %}
+		</div>
+  	</div>
+
+	<div class="row">
+
+	<div class="col-md-12 mb-5">
+        <h2>How it works - its quite simple!</h2>
+        <hr>
+        <p>Placeholder for Image that describes how to use the website</p>
+
+      </div>
+    </div>
+  </div>
+
+
+
+  <!-- /.container -->
 
 {% endblock %}
-
-{% block content2 %}
-	<body>
-		<form action="." method="post">
-            {% csrf_token %}
-			{{ location.as_p }}<br>
-            <button type="submit">Get Trends</button>
-        </form>
-	</body>
-{% endblock content2 %}
-
-{% block content3 %}
-<div class="container">
-
-  <h3>Your location-based Trends for: {{input_location}}</h3>
-
-  <p>Your Top 10 Trends are:</p>
-
-{% for trend in top10_trends %}
-    {{ trend }}<br>
-{% endfor %}
-</div>
-{% endblock content3 %}
-
 </html>
