--- a/TwitterSentimentAnalyser/TSentimentAnalyser/templates/FAQ.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/templates/FAQ.html
@@ -1,95 +1,63 @@
 {% extends "base.html" %}
 {% block content %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>This is FAQ page</title>
-    <div class="box">
-   <h5 class="heading">Frequently Asked Questions</h5>
-   <div class="faqs">
-      <details>
-         <summary><b>What is a Sentiment Analysis?</b></summary>
-         <p class="text"> Sentiment Analysis is a technique used in text mining. It may, therefore, be described as a
-            text mining technique for analyzing the underlying sentiment of a text message, i.e., a Tweet. Twitter
-            sentiment or opinion expressed through it may be positive, negative or neutral.</p>
-      </details>
-      <details>
-         <summary><b>How do you calculate the Sentiment Score?</b></summary>
-         <p class="text"> We use a Python Module called <a href="https://www.geeksforgeeks.org/python-sentiment-analysis-using-vader/">
-            VaderSentiment</a> for the calculation of the Sentiment Score. Before analyzing each Tweet, our programs
-            strips all irrelevant data (Links, special characters, ...) from the text, which could affect the evaluation
-            process. After rating the Tweet, our system performs additional calculations, which can be seen on our
-            Output Page.</p>
-      </details>
-      <details>
-         <summary><b>How can I use this website?</b></summary>
-         <p class="text">It is fairly simple to use. All you have to do is head over to our
-            <a href="http://127.0.0.1:8000">Homepage</a> and input the Searchterm or Hashtag you would like us to
-            analyse for you. Additionally you can define how many Tweets should be considered.</p>
-      </details>
-      <details>
-         <summary><b>Where does the data come from?</b></summary>
-         <p class="text">We use the <a href="https://developer.twitter.com/en/docs/twitter-api">Twitter API </a>to
-            directly access the latest Tweets from Twitter based on your input.</p>
-      </details>
-      <details>
-         <summary><b>Whom should I contact for further information or queries?</b></summary>
-         <p class="text">For further information or queries, you can find our contact information at the
-            <a href="http://127.0.0.1:8000/Contact">contact page</a>.</p>
-      </details>
-<style>
-     @import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
+{% load static %}
 
-body{
-   background: #f6f6f6;
-}
+  <!-- Header -->
+  <header class="bg-primary py-5 mb-5">
+    <div class="container h-100">
+      <div class="row h-100 align-items-center">
+        <div class="col-lg-12">
+          <h1 class="display-4 text-white mt-5 mb-2">Frequently Asked Questions</h1>
+        </div>
+      </div>
+    </div>
+  </header>
 
-.box{
-   width: 1500px;
-   margin: 10px auto;
-   background: #eceff1;
-   border-radius: 7px;
-   box-shadow: 5px 10px 15px rgba(0,0,0,.3);
-}
-
-.box .heading{
-   background: #29b6f6;
-   border-radius: 7px 7px 0px 0px;
-   padding: 10px;
-   color:#ffffff ;
-   text-align: center
-   font-family: "Rubik";
-}
-
-.faqs{
-   padding: 10px 40px 40px;
-}
-
-}
-
-details{
-   background: #ffffff;
-   padding: 10px 20px;
-   border-radius: 7px;
-   margin-top: 20px;
-   font-family: "Rubik";
-   font-size: 18px;
-   letter-spacing: 1px;
-   cursor: pointer;
-}
-
-details summary{
-   outline: none;
-}
-
-</style>
-
-   </div>
-</div>
-</head>
-<body>
+  <!-- Page Content -->
 
 
-</body>
+  <div class="container">
+
+    <div class="row">
+		<div class="col-md-12 mb-2">
+		<h2>What is a Sentiment Analysis?</h2>
+		<hr>
+        <p class = "text-justify">Sentiment Analysis is a technique used in text mining. It may, therefore, be described as as text mining technique for analyzing the underlying sentiment of a text message, i.e., a Tweet. Twitter sentiment or opinion expressed through it may be positive, negative or neutral.</p>
+		</div>
+  	</div>
+
+     <div class="row">
+		<div class="col-md-12 mb-2">
+		<h2>How do you calculate the Sentiment Score?</h2>
+		<hr>
+        <p class = "text-justify">We use a Python Module called <a href="https://www.geeksforgeeks.org/python-sentiment-analysis-using-vader/">VaderSentiment</a> for the calculation of the Sentiment Score. Before analyzing each Tweet, our programs strips all irrelevant data (Links, special characters, ...) from the text, which could affect the evaluation process. After rating the Tweet, our system performs additional calculations, which can be seen on our Output Page.</p>
+		</div>
+  	</div>
+
+     <div class="row">
+		<div class="col-md-12 mb-2">
+		<h2>How can I use this website?</h2>
+		<hr>
+        <p class = "text-justify">It is fairly simple to use. All you have to do is head over to our <a href="http://127.0.0.1:8000">Homepage</a> and input the Searchterm or Hashtag you would like us to analyse for you. Additionally you can define how many Tweets should be considered.</p>
+		</div>
+  	</div>
+
+     <div class="row">
+		<div class="col-md-12 mb-2">
+		<h2>Where does the data come from?</h2>
+		<hr>
+        <p class = "text-justify">We use the <a href="https://developer.twitter.com/en/docs/twitter-api">Twitter API</a> to directly access the latest Tweets from Twitter based on your input.</p>
+		</div>
+  	</div>
+
+     <div class="row">
+		<div class="col-md-12 mb-5">
+		<h2>Whom should I contact for further information?</h2>
+		<hr>
+        <p class = "text-justify">For further information or queries, you can find our contact information at the <a href="http://127.0.0.1:8000/Contact">contact page</a>.</p>
+		</div>
+  	</div>
+
+  </div>
 </html>
 {% endblock %}
