--- a/TwitterSentimentAnalyser/TSentimentAnalyser/templates/base.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/templates/base.html
@@ -1,106 +1,72 @@
-<!D0CTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 {% load static %}
-<html>
-<head>
-    <title>Twitter Sentiment Analyser</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    {% block title %}
-   {% endblock title %}
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
-    <style>
-     body{
-        margin:0;
-        padding:0;
-        background:white;
-        }
-     nav{
-        width:100%;
-        background:black;
-        overflow:auto;
-        }
-     ul{
-        padding:0;
-        margin:0 0 0 150px;
-        list-style:none
-        }
-     li{
-        float:left;
-        }
-     .logo img{
-        position:absolute;
-        margin-top:5px;
-        margin-left:20px;
-        }
-     nav a{
-        width:400px;
-        display:block;
-        padding:20px 15px;
-        text-decoration:none;
-        font-family:Arial;
-        color:#039be5;
-        text-align:center;
-        }
-     nav a:hover {
-        background:none;
-        transition:0.5s;
-        text-transform:uppercase;
-        }
 
-    </style>
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Home Page</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+
+
+  <!-- Custom styles for this template -->
+  <link href="{% static 'css/bootstrap-frontpage.css' %}" rel="stylesheet">
+
 </head>
+
 <body>
-<div class ="logo"><a href ="http://127.0.0.1:8000"><img src = "{%static 'twitterlogo.png' %}" width = "120px"></a>
-</div>
-<nav>
-    <ul>
-         <li><a href ="http://127.0.0.1:8000"> Home</a></li>
-        <li><a href ="./FAQ"> FAQ</a></li>
-        <li><a href ="./Contact"> Contact</a></li>
-    </ul>
-</nav>
-</body>
-</html>
- </head>
-  <body>
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="http://127.0.0.1:8000#">Twitter Sentiment Analyser</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="http://127.0.0.1:8000">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./FAQ">FAQ</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
    {% block content %}
    {% endblock content%}
 
-   {% block content2 %}
-   {% endblock content2 %}
+  <!-- Footer -->
+  <body class="d-flex flex-column min-vh-100">
+    <div class="wrapper flex-grow-1"></div>
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; A Website Created By Students From The University of Liechtenstein</p>
+    </div>
+    <!-- /.container -->
+  </footer>
+</body>
 
-   {% block content3 %}
-   {% endblock content3 %}
+  <!-- Bootstrap core JavaScript -->
+  <script src="{% static 'js/jquery.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+
 
 </body>
+
 </html>
-
-<!___*** Footer Area ***___!>
-<style>
-        body {
-            display: flex;
-            min-height: 100vh;
-            flex-direction: column;
-
-        }
-        main {
-            flex: 1 0 auto;
-        }
-
-
-    </style>
-
-<main>
-</main>
-    <footer class="page-footer #455a64 blue-grey darken-2" style="!important;padding-top: 0">
-
-    <div class="footer-copyright">
-        <div class="container">© 2020 Created by Students of University of Liechtenstein
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a></div>
-    </div>
-</footer>
-</html>
-
