--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/prediction.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/prediction.html
@@ -1,12 +1,112 @@
 {% extends "base.html" %}
 {% block content %}
-<html>
+{% load static %}
+
+
+  <!-- Header -->
+  <header class="bg-primary py-5 mb-5">
+    <div class="container h-100">
+      <div class="row h-100 align-items-center">
+        <div class="col-lg-12">
+          <h1 class="display-4 text-white mt-5 mb-2">Here are your results for: <b>{{input_hashtag}}</b></h1>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <!-- Page Content -->
+
+
+  <div class="container">
+    <div class="row">
+		<div class="col-md-12 mb-2">
+		<h2>Lets have a first look at your results:</h2>
+		<hr>
+		</div>
+  	</div>
+
+    <div class="row">
+      <div class=" col-md-6">
+        <div class="row">
+          <div class="col-md-6 mb-3">
+            <div class="card text-center">
+              <div class="card-body">
+                <h4 class="card-title">Pulled Tweets</h4>
+                <h5 class="card-text">{{input_num_terms}}</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 mb-3">
+            <div class="card text-center">
+              <div class="card-body">
+                <h4 class="card-title">Sentiment Score</h4>
+                <h5 class="card-text">{{sentiment_average}}</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 mb-3">
+            <div class="card text-center">
+              <div class="card-body">
+                <h4 class="card-title">Max Tweet Score</h4>
+                <h5 class="card-text">{{max_sentiment}}</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 mb-3">
+            <div class="card text-center">
+              <div class="card-body">
+                <h4 class="card-title">Min Tweet Score</h4>
+                <h5 class="card-text">{{min_sentiment}}</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12 mb-5">
+            <div class="card text-center">
+              <div class="card-body">
+                <h4 class="card-title">Time duration</h4>
+                <h5 class="card-text">{{tweet_duration}}</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 mb-5">
+        <div class="card border-0">
+          <img class="card-img-top" src="data:image/png;base64,{{ chart|safe }}">
+        </div>
+      </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Most common words in the Tweets</h2>
+        <hr>
+        <div class="card border">
+          <img class="card-img-bottom" src="data:image/png;base64,{{ word_cloud|safe }}">
+		</div>
+  	  </div>
+      <div class="col-md-6">
+        <h2>Most used #Hashtags in the Tweets</h2>
+        <hr>
+        <div class="card border">
+          <img class="card-img-bottom" src="data:image/png;base64,{{ hashtag_cloud|safe }}">
+		</div>
+  	  </div>
+    </div>
+</div>
+    <!-- /.row -->
+
 
 <body>
 
 <div class="container">
-  <h1>Sentiment Analyser</h1>
-  <h4>Lets have a look at your results:</h4>
+  <h4>Which words </h4>
   <h5>You pulled <var>{{input_num_terms}}</var> Tweets for the search-term <b><var>{{input_hashtag}}</var></b>.</h5>
   <h6>Your pulled Tweets consist of a time-length of <var>{{tweet_duration}}.</var></h6>
   <h4>Total Sentiment Score: <var>{{sentiment_average}}</var></h4>
