--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/prediction.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/prediction.html
@@ -20,7 +20,7 @@
   <div class="container">
     <div class="row">
 		<div class="col-md-12 mb-2">
-		<h2>Lets have a first look at your results:</h2>
+		<h2>Lets have a first look at your results</h2>
 		<hr>
 		</div>
   	</div>
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-12 mb-5">
+          <div class="col-md-12 mb-4">
             <div class="card text-center">
               <div class="card-body">
                 <h4 class="card-title">Time duration</h4>
@@ -74,7 +74,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6 mb-5">
+      <div class="col-md-6 mb-4">
         <div class="card border-0">
           <img class="card-img-top" src="data:image/png;base64,{{ chart|safe }}">
         </div>
@@ -84,67 +84,74 @@
 
 <div class="container">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-7">
+        <h2>What does this Sentiment Score mean?</h2>
+        <hr>
+        <div class="card border-0 mb-5">
+          <h5 class="card-text">The sentiment-score lies in between -1 and +1 and is classified as follows:</h5>
+		<h5 class="card-text">A tweet in between +1 and +0.05 is positive.</h5>
+        <h5 class="card-text">A tweet in between +0.05 and -0.05 is neutral.</h5>
+        <h5 class="card-text">A tweet in between -0.05 and -1 is negative.</h5>
+        </div>
+  	  </div>
+      <div class="col-md-5">
+        <h2>Who Tweets about this topic?</h2>
+        <hr>
+        <div class="card border-0 mb-5">
+          <div class="text-justify">
+            {{ df_top_html | safe }}
+          </div>
+      </div>
+    </div>
+  	  </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+      <div class="col-md-6 mb-5">
         <h2>Most common words in the Tweets</h2>
         <hr>
         <div class="card border">
           <img class="card-img-bottom" src="data:image/png;base64,{{ word_cloud|safe }}">
 		</div>
   	  </div>
-      <div class="col-md-6">
+      <div class="col-md-6 mb-5">
         <h2>Most used #Hashtags in the Tweets</h2>
         <hr>
         <div class="card border">
           <img class="card-img-bottom" src="data:image/png;base64,{{ hashtag_cloud|safe }}">
-		</div>
+        </div>
   	  </div>
     </div>
 </div>
+
+<div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Want to know more about the Tweets?</h2>
+        <hr>
+  	  </div>
+    </div>
+      <div class="col-md-12">
+        <h5>Use the button below to display all pulled Tweets.</h5>
+        <br>
+        <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#showcase">Expand / Collapse</button>
+        <div id="showcase" class="collapse">
+          {{ df_short_html | safe }}
+        </div>
+  	  </div>
+</div>
+
+
+
     <!-- /.row -->
 
 
-<body>
 
-<div class="container">
-  <h4>Which words </h4>
-  <h5>You pulled <var>{{input_num_terms}}</var> Tweets for the search-term <b><var>{{input_hashtag}}</var></b>.</h5>
-  <h6>Your pulled Tweets consist of a time-length of <var>{{tweet_duration}}.</var></h6>
-  <h4>Total Sentiment Score: <var>{{sentiment_average}}</var></h4>
-
-  <h6>The total sentiment score can be between -1 and 1.</h6>
-  <h6>The higher the score the more positive words have been used for your specified hashtag.</h6>
   <h5>Positive Tweets: <var>{{count_positive}}</var></h5>
   <h5>Neutral Tweets: <var>{{count_neutral}}</var></h5>
   <h5>Negative Tweets: <var>{{count_negative}}</var></h5>
-    {% if chart %}
-        <img src="data:image/png;base64,{{ chart|safe }}">
-    {% endif %}
-  <h5>Min Sentiment Score in Tweets: <var>{{min_sentiment}}</var></h5>
-  <h5>Max Sentiment Score in Tweets: <var>{{max_sentiment}}</var></h5>
   <h5>Standard Deviation of Sentiment Score: <var>{{std_sentiment}}</var></h5>
-  <h4>Who tweets about <b><var>{{input_hashtag}}</var></b>?</h4>
-  <h6>Here is a list based on the follower count of the Tweeters. Maybe someone famous tweeted about it?</h6>
-  {{ df_top_html | safe }}
-  <h4>Loaded Tweets</h4>
-  <p>Use the button below to display all used Tweets with their sentiment score.</p>
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#showcase">Expand / Collapse</button>
-  <div id="showcase" class="collapse">
-    {{ df_short_html | safe }}
-  </div>
-</div>
-<h4>WordCloud</h4>
-{% if word_cloud %}
-    <img src="data:image/png;base64,{{ word_cloud|safe }}">
-{% endif %}
-<h4>HashtagCloud</h4>
-{% if word_cloud %}
-    <img src="data:image/png;base64,{{ hashtag_cloud|safe }}">
-{% endif %}
-</body>
 
-</html>
 {% endblock content%}
-
-{% block content2 %}
-
-{% endblock content2%}
