--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataCollector/templates/home.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataCollector/templates/home.html
@@ -7,18 +7,46 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class="display-4 text-white mt-5 mb-2">Twitter Sentiment Analyser</h1>
-			<p class="lead mb-5 text-white-50">An easy and fast tool to analyse Tweets on Twitter.</p>
-			<div class ="form-group">
-				<form action="hit" method="post">
-					{% csrf_token %}
-         			{{ ff.as_p }}
-         			<button class="btn btn-primary btn btn-light" type="Submit">Submit</button>
-				</form>
-			</div>
-        </div>
-      </div>
-    </div>
+          <h1 class="display-4 text-white mt-5 mb-2">Welcome to Tweesent</h1>
+			<p class="lead mb-0 text-white-50">Tweesent is an easy and fast sentiment analyser to investigate real-time Tweets on Twitter.</p>
+			<p class="lead mb-5 text-white-50"> Just enter the required data below and start analysing whichever Tweets you like!</p>
+				<div class="col-md-12">
+					<div class ="form-group ">
+						<form action="hit" method="post">
+							<div class ="row justify-content-center">
+								<div class="text text-light">
+						 		<h5>#Hashtag or Word</h5>
+								</div>
+							</div>
+							{% csrf_token %}
+         					{{ hashtag_form.as_p}}<br>
+							<div class ="row justify-content-center">
+								<div class="text text-light">
+						 		<h5>Number of Tweets</h5>
+								</div>
+							</div>
+							{% csrf_token %}
+         					{{ num_form.as_p}}<br>
+								<!-- Removes Arrows in Number of Tweets Field -->
+								<style>
+									input::-webkit-outer-spin-button,
+									input::-webkit-inner-spin-button {
+								  	-webkit-appearance: none;
+								   	margin: 0;
+									}
+									input[type="number"] {
+								   -moz-appearance: textfield;
+								}
+								</style>
+							<div class="row justify-content-center">
+								<button class="btn btn-primary btn btn-light" type="Submit">Start Analysing</button>
+							</div>
+						</form>
+					</div>
+				</div>
+		</div>
+	  </div>
+	</div>
   </header>
 
   <!-- Page Content -->
@@ -35,18 +63,16 @@
 				<form action="." method="post">
 					{% csrf_token %}
          			{{ location.as_p }}
-         			<button class="btn btn-primary btn btn-light" type="Submit" data-toggle="collapse" data-target="#showcase">Submit</button>
+         			<button class="btn btn-primary btn btn-primary" type="Submit" data-toggle="collapse" data-target="#showcase">Submit</button>
 				</form>
 			</div>
 		</div>
 		<div class="col-md-4 mb-5">
-			<div id="showcase" class="collapse">
-  				<h2>Top 10 Trends for: {{input_location}}</h2>
-				<hr>
-				{% for trend in top10_trends %}
-				{{ trend }}<br>
-				{% endfor %}
-			</div>
+			<h2>Top 10 Trends for: {{input_location}}</h2>
+			<hr>
+			{% for trend in top10_trends %}
+			{{ trend }}<br>
+			{% endfor %}
 		</div>
   	</div>
 
