changed upper/lower case letters on copyright notice

--- a/TwitterSentimentAnalyser/TSentimentAnalyser/templates/base.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/templates/base.html
@@ -56,7 +56,7 @@
     <div class="wrapper flex-grow-1"></div>
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; A Website Created By Students From The University of Liechtenstein</p>
+      <p class="m-0 text-center text-white">Copyright &copy; A website created by Students from the University of Liechtenstein</p>
     </div>
     <!-- /.container -->
   </footer>
