Split WordCloud, ... from DataAnalyser and created App_ChartCreator Cleaned HTML Code in Contact.html

--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataCollector/templates/home.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataCollector/templates/home.html
@@ -12,7 +12,7 @@
 			<p class="lead mb-5 text-white-50"> Just enter the required data below and start analysing whichever Tweets you like!</p>
 				<div class="col-md-12">
 					<div class ="form-group ">
-						<form action="hit" method="post">
+						<form action="analysis" method="post">
 							<div class ="row justify-content-center">
 								<div class="text text-light">
 						 		<h5>#Hashtag or Word</h5>
