--- a/TwitterSentimentAnalyser/TSentimentAnalyser/templates/base.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/templates/base.html
@@ -31,7 +31,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="http://127.0.0.1:8000">Home
               <span class="sr-only">(current)</span>
             </a>
@@ -65,6 +65,7 @@
   <!-- Bootstrap core JavaScript -->
   <script src="{% static 'js/jquery.min.js' %}"></script>
   <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+  <script src="{% static 'main.js' %}"></script>
 
 
 </body>
