--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/FAQ.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/FAQ.html
@@ -50,7 +50,31 @@
 		</div>
   	</div>
 
-     <div class="row">
+	<div class="row">
+		<div class="col-md-12 mb-5">
+		<h2>Where can I find the source code for this website?</h2>
+		<hr>
+		<p class = "text-justify">You can find the source code on this link   <a href="https://github.com/fschadler/ISD">github</a>.</p>
+		</div>
+  	</div>
+
+	<div class="row">
+		<div class="col-md-12 mb-5">
+		<h2>Is it possible to get the raw data?</h2>
+		<hr>
+        <p class = "text-justify">Yes, you can download the raw data as Excel file by clicking download button</a>.</p>
+		</div>
+  	</div>
+
+	<div class="row">
+		<div class="col-md-12 mb-5">
+		<h2>Why can't I load more than 500 tweets?</h2>
+		<hr>
+         <p class = "text-justify">You will get a message if you enter more than 500 tweets</a>.</p>
+		</div>
+  	</div>
+
+	<div class="row">
 		<div class="col-md-12 mb-5">
 		<h2>Whom should I contact for further information?</h2>
 		<hr>
