--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/analysis.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/analysis.html
@@ -85,6 +85,11 @@
         <img class="card-img-top" src="data:image/png;base64,{{ boxplot|safe }}">
       </div>
     </div>
+    <div class="col-md-5 mb-4">
+      <div class="card border-0">
+        <img class="card-img-top" src="data:image/png;base64,{{ distribution|safe }}">
+      </div>
+    </div>
     <!-- Column 3 -->
     <div class="col-md-2 mb-4">
       <div class ="row">
