added <br> on analysis.html in line 135-138

--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/analysis.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/analysis.html
@@ -132,10 +132,10 @@
         <h2>What does this Sentiment Score mean?</h2>
         <hr>
         <div class="card border-0 mb-5 d-flex justify-content-center">
-          <h5 class="card-text">In general, the sentiment score lies in between -1 and +1:</h5>
-          <h5 class="card-text">A tweet in between +1 and +0.05 is positive.</h5>
-          <h5 class="card-text">A tweet in between +0.05 and -0.05 is neutral.</h5>
-          <h5 class="card-text">A tweet in between -0.05 and -1 is negative.</h5>
+          <h5 class="card-text">In general, the sentiment score lies in between -1 and +1:</h5><br>
+          <h5 class="card-text">A tweet in between +1 and +0.05 is positive.</h5><br>
+          <h5 class="card-text">A tweet in between +0.05 and -0.05 is neutral.</h5><br>
+          <h5 class="card-text">A tweet in between -0.05 and -1 is negative.</h5><br>
           <h5>Your sentiment score is {{sentiment_average}}, which means that people on Twitter are using {{sentiment_describe}} words associated with {{input_hashtag}}.</h5>
         </div>
   	  </div>
