--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/analysis.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/analysis.html
@@ -64,10 +64,10 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 mb-5">
+        <div class="col-md-12 mb-3">
           <div class="card text-center">
             <div class="card-body">
-              <h5 class="card-title">Time duration</h5>
+              <h5 class="card-title">Time Span</h5>
               <h5 class="card-text">{{tweet_duration}}</h5>
             </div>
           </div>
@@ -78,16 +78,6 @@
     <div class="col-md-5 mb-4">
       <div class="card border-0">
         <img class="card-img-top" src="data:image/png;base64,{{ chart|safe }}">
-      </div>
-    </div>
-    <div class="col-md-5 mb-4">
-      <div class="card border-0">
-        <img class="card-img-top" src="data:image/png;base64,{{ boxplot|safe }}">
-      </div>
-    </div>
-    <div class="col-md-5 mb-4">
-      <div class="card border-0">
-        <img class="card-img-top" src="data:image/png;base64,{{ distribution|safe }}">
       </div>
     </div>
     <!-- Column 3 -->
@@ -113,7 +103,7 @@
         </div>
       </div>
       <div class ="row">
-        <div class="col-md-12 mb-5">
+        <div class="col-md-12 mb-3">
           <div class="card text-center">
             <div class="card-body">
               <h5 class="card-title">Negative</h5>
@@ -124,11 +114,68 @@
       </div>
     </div>
   </div>
+    <div class="row">
+      <div class="col-md-12 mb-2">
+        <button type="button" class="btn btn-primary mb-3" data-toggle="collapse" data-target="#moreinfo">Additional Information</button>
+        <div id="moreinfo" class="collapse">
+          <div class="row">
+            <div class="col-md-4 mb-3">
+              <div class="card text-center">
+                <div class="card-body">
+                  <h5 class="card-title">Newest Tweet</h5>
+                  <h5 class="card-text">{{newest_tweet}}</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card text-center">
+                <div class="card-body">
+                  <h5 class="card-title">Sentiment Score</h5>
+                  <h5 class="card-text">{{sentiment_average}}</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card text-center">
+                <div class="card-body">
+                  <h5 class="card-title">Sentiment Score</h5>
+                  <h5 class="card-text">{{sentiment_average}}</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
+
+
+<div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Sentiment Boxplot</h2>
+        <hr>
+        <div class="col-md-6 mb-4">
+          <div class="card border-0" style="width: 30rem;">
+            <img class="card img-top border-0" src="data:image/png;base64,{{ boxplot|safe }}">
+          </div>
+        </div>
+  	  </div>
+      <div class="col-md-6">
+        <h2>Sentiment Distribution</h2>
+        <hr>
+        <div class="col-md-6 mb-4">
+          <div class="card border-0" style="width: 23rem;">
+            <img class="card img-top border-0" src="data:image/png;base64,{{ distribution|safe }}">
+          </div>
+        </div>
+  	  </div>
+    </div>
 </div>
 
 <div class="container">
     <div class="row">
-      <div class="col-md-7">
+      <div class="col-md-6">
         <h2>What does this Sentiment Score mean?</h2>
         <hr>
         <div class="card border-0 mb-5 d-flex justify-content-center">
@@ -139,7 +186,7 @@
           <h5>Your sentiment score is {{sentiment_average}}, which means that people on Twitter are using {{sentiment_describe}} words associated with {{input_hashtag}}.</h5>
         </div>
   	  </div>
-      <div class="col-md-5">
+      <div class="col-md-6">
         <h2>Who Tweets about this topic?</h2>
         <hr>
         <div class="card border-0 mb-5">
@@ -191,7 +238,5 @@
   	  </div>
     </div>
 </div>
-
-
 
 {% endblock content%}
